# EasyRef

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  database.py  main.py  models.py  pyproject.toml  requirements.txt
backend/easyref_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/: main.py  models.py  schemas.py  storage.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BoardImage.tsx  BoardSidebar.tsx  BulkEditToolbar.tsx  ContextMenu.tsx  FileDetailModal.tsx  Gallery.tsx  GallerySidebar.tsx  Navbar.tsx  ReferenceBoard.tsx  Sidebar.tsx  TagInput.tsx  Uploader.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: BoardPage.tsx  GalleryPage.tsx
frontend/src/store/: useBoardStore.ts  useFileStore.ts  useTagStore.ts
